force-app/main/default/objects/Federal_Tax_Bracket__mdt/Federal_Tax_Bracket__mdt.object-meta.xml
<CustomObject>
    <label>Federal Tax Bracket</label>
    <pluralLabel>Federal Tax Brackets</pluralLabel>
</CustomObject>