force-app/main/default/objects/Federal_Tax_Bracket__mdt/fields/Filing_Status__c.field-meta.xml
<CustomField>
    <fullName>Filing_Status__c</fullName>
    <label>Filing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
                <default>true</default>
                <label>Single</label>
            </value>
            <value>
                <fullName>Married, filing jointly</fullName>
            </value>
            <value>
                <fullName>Married, filing seperately</fullName>
            </value>
            <value>
                <fullName>Head of the Household</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>