force-app/main/default/objects/Federal_Tax_Bracket__mdt/fields/Lower_Limit__c.field-meta.xml
<CustomField>
    <fullName>Lower_Limit__c</fullName>
    <label>Lower Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>