force-app/main/default/objects/Federal_Tax_Bracket__mdt/fields/Tax_Year__c.field-meta.xml
<CustomField>
    <fullName>Tax_Year__c</fullName>
    <label>Tax Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>